// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert with error variant matches snapshot 1`] = `
<div
  className="dy-flex fdn-row gp-12px pg-16px fwp-nowrap ais-flex-start brs-8px bwh-1px bsee-solid bcrr- bcr- bsw-0-1px-2px-rgba239-68-68-0p05 tn-all-0p2s-ease"
>
  <div
    className="asf-flex-start mtp-2px"
  >
    <div
      className="wh-24px ht-24px dy-flex jct-center ais-center wht-24 lht-24px cr- tm-rotate0deg"
      size={20}
    >
      <svg
        aria-hidden="false"
        fill=""
        focusable="false"
        stroke="none"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth={1}
        viewBox="0 0 24 24"
      >
        <circle
          cx="12"
          cy="12"
          r="10"
        />
        <line
          stroke="white"
          x1="15"
          x2="9"
          y1="9"
          y2="15"
        />
        <line
          stroke="white"
          x1="9"
          x2="15"
          y1="9"
          y2="15"
        />
      </svg>
    </div>
  </div>
  <div
    className="dy-flex fdn-column gp-8px"
  >
     
    <div
      className="fse-16px lht-24px fwt-600 lsg--0p01em tdn-none cr- bcr-"
      fontStyle="normal"
    >
      Error
    </div>
    <div
      className="fse-14px lht-20px fwt-400 lsg--0p01em tdn-none cr- bcr-"
      fontStyle="normal"
    >
      This is an error
    </div>
  </div>
</div>
`;

exports[`Alert with info variant matches snapshot 1`] = `
<div
  className="dy-flex fdn-row gp-12px pg-16px fwp-nowrap ais-flex-start brs-8px bwh-1px bsee-solid bcrr- bcr- bsw-0-1px-2px-rgba59-130-246-0p05 tn-all-0p2s-ease"
>
  <div
    className="asf-flex-start mtp-2px"
  >
    <div
      aria-label="Information"
      className="wh-24px ht-24px dy-flex jct-center ais-center wht-24 lht-24px cr- tm-rotate0deg"
      size={20}
    >
      <svg
        aria-hidden="false"
        fill=""
        focusable="false"
        stroke="none"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth={1}
        viewBox="0 0 24 24"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
        />
      </svg>
    </div>
  </div>
  <div
    className="dy-flex fdn-column gp-8px"
  >
     
    <div
      className="fse-16px lht-24px fwt-600 lsg--0p01em tdn-none cr- bcr-"
      fontStyle="normal"
    >
      Info
    </div>
    <div
      className="fse-14px lht-20px fwt-400 lsg--0p01em tdn-none cr- bcr-"
      fontStyle="normal"
    >
      This is info
    </div>
  </div>
</div>
`;

exports[`Alert with success variant matches snapshot 1`] = `
<div
  className="dy-flex fdn-row gp-12px pg-16px fwp-nowrap ais-flex-start brs-8px bwh-1px bsee-solid bcrr- bcr- bsw-0-1px-2px-rgba34-197-94-0p05 tn-all-0p2s-ease"
>
  <div
    className="asf-flex-start mtp-2px"
  >
    <div
      className="wh-24px ht-24px dy-flex jct-center ais-center wht-24 lht-24px cr- tm-rotate0deg"
      size={20}
    >
      <svg
        aria-hidden="false"
        fill=""
        focusable="false"
        stroke="none"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth={1}
        viewBox="0 0 24 24"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
        />
      </svg>
    </div>
  </div>
  <div
    className="dy-flex fdn-column gp-8px"
  >
     
    <div
      className="fse-16px lht-24px fwt-600 lsg--0p01em tdn-none cr- bcr-"
      fontStyle="normal"
    >
      Success
    </div>
    <div
      className="fse-14px lht-20px fwt-400 lsg--0p01em tdn-none cr- bcr-"
      fontStyle="normal"
    >
      This is success
    </div>
  </div>
</div>
`;

exports[`Alert with warning variant matches snapshot 1`] = `
<div
  className="dy-flex fdn-row gp-12px pg-16px fwp-nowrap ais-flex-start brs-8px bwh-1px bsee-solid bcrr- bcr- bsw-0-1px-2px-rgba249-115-22-0p05 tn-all-0p2s-ease"
>
  <div
    className="asf-flex-start mtp-2px"
  >
    <div
      className="wh-24px ht-24px dy-flex jct-center ais-center wht-24 lht-24px cr- tm-rotate0deg"
      size={20}
    >
      <svg
        aria-hidden="false"
        fill="none"
        focusable="false"
        stroke=""
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth={1}
        viewBox="0 0 24 24"
      >
        <path
          d="M10.29 3.86l-6.6 11.4c-.78 1.36.2 3.1 1.71 3.1h13.2c1.51 0 2.49-1.74 1.71-3.1l-6.6-11.4a2 2 0 0 0-3.42 0z"
        />
        <line
          stroke="color-orange-500"
          x1="12"
          x2="12"
          y1="6"
          y2="13"
        />
        <line
          stroke="color-orange-500"
          x1="12"
          x2="12"
          y1="15"
          y2="15"
        />
      </svg>
    </div>
  </div>
  <div
    className="dy-flex fdn-column gp-8px"
  >
     
    <div
      className="fse-16px lht-24px fwt-600 lsg--0p01em tdn-none cr- bcr-"
      fontStyle="normal"
    >
      Warning
    </div>
    <div
      className="fse-14px lht-20px fwt-400 lsg--0p01em tdn-none cr- bcr-"
      fontStyle="normal"
    >
      This is a warning
    </div>
  </div>
</div>
`;
